tests/conformance/typecheck/invalid/block_val_annotation_mismatch.ks
// EXPECT: Cannot unify
fun idInt(x: Int): Int = x
val _ = { val y: String = idInt(42); () }
